[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/TimesSS/TimesHeader18.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/UI/logistics_bg.png" type="Texture" id=2]
[ext_resource path="res://Scripts/OfficerPortrait.gd" type="Script" id=3]

[node name="OfficerPortrait" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1820.0
margin_bottom = -980.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0
rect_scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitImage" type="TextureRect" parent="."]
margin_right = 100.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkButton" type="Button" parent="."]
margin_left = 98.0
margin_top = 2.0
margin_right = 170.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TalkButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.5
margin_right = 20.0
margin_bottom = 10.5
custom_fonts/font = ExtResource( 1 )
text = "Talk"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dismiss" type="Button" parent="."]
margin_left = 98.0
margin_top = 30.0
margin_right = 170.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dismiss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -10.5
margin_right = 29.0
margin_bottom = 10.5
custom_fonts/font = ExtResource( 1 )
text = "Dismiss"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Execute" type="Button" parent="."]
margin_left = 98.0
margin_top = 58.0
margin_right = 170.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Execute"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -10.5
margin_right = 29.0
margin_bottom = 10.5
custom_fonts/font = ExtResource( 1 )
text = "Execute"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverBox" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.729412 )
margin_right = 242.0
margin_bottom = 203.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="HoverBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -90.5
margin_right = 62.5
margin_bottom = -69.5
custom_fonts/font = ExtResource( 1 )
text = "Name Goes Here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeLabel" type="Label" parent="HoverBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -67.5
margin_right = 62.5
margin_bottom = -46.5
custom_fonts/font = ExtResource( 1 )
text = "Age 42"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_top = 100.0
margin_right = 170.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
text = "Quartermaster"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Background" to="." method="_on_Background_mouse_entered"]
[connection signal="mouse_exited" from="Background" to="." method="_on_Background_mouse_exited"]
